I swear I can spell

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
           path: aoc
 
       - name: Install dependencies
-        run: v instlal pcre
+        run: v install pcre
 
       - name: Run verify.v
         run: cd aoc && v run verify.v
