--- a/.github/workflows/check_changed.yml
+++ b/.github/workflows/check_changed.yml
@@ -5,7 +5,7 @@ on:
   pull_request:
 
 jobs:
-  works-on-latest-v-and-ubuntu:
+  ubuntu:
     runs-on: ubuntu-latest
     steps:
       - name: Install dependencies
@@ -22,9 +22,10 @@ jobs:
         run: make && ./v symlink -githubci
 
       - name: Checkout V AoC repo
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
         with:
           path: aoc
+          fetch-depth: 0
 
       - name: Install dependencies
         run: v install pcre
